feat: WSC-1281 add start timestamp to Meeting (#96)
* chore: add autofix for pretty-java formatter